[gd_scene load_steps=7 format=2]

[ext_resource path="res://gui_elements/Title.tscn" type="PackedScene" id=1]
[ext_resource path="res://gui_elements/ChangeSceneButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://gui_elements/QuitButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/ui_theme.tres" type="Theme" id=4]
[ext_resource path="res://gui_elements/ResumeButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://gui_elements/UserInterface.gd" type="Script" id=6]

[node name="UserInterface" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrencyLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -271.747
margin_top = 36.9756
margin_right = -105.747
margin_bottom = 73.9756
text = "Currency: %s"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenuOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.49942
margin_bottom = -0.49939
color = Color( 0, 0.121569, 0.129412, 0.352941 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" parent="PauseMenuOverlay" instance=ExtResource( 1 )]
text = "Paused"

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenuOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.5
margin_top = -87.0
margin_right = 95.5
margin_bottom = 87.0
rect_pivot_offset = Vector2( -0.550415, -3.87976 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" parent="PauseMenuOverlay/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 0.0
margin_right = 191.0
margin_bottom = 55.0

[node name="ChangeSceneButton" parent="PauseMenuOverlay/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 59.0
margin_right = 191.0
margin_bottom = 114.0
text = "Main Screen"
next_scene_path = "res://gui_elements/TitleScreen.tscn"

[node name="QuitButton" parent="PauseMenuOverlay/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 118.0
margin_right = 191.0
margin_bottom = 174.0

[node name="ToolTipLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -140.0
margin_top = -136.525
margin_right = 140.0
margin_bottom = -99.525
text = "Press Space to Interact"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
